Parameterize CORS allowed origins instead of hardcoded localhost ports
SecurityConfig (and the redundant per-controller @CrossOrigin
annotations) hardcoded the Vite dev-server origins (localhost:5173,
localhost:3000) and were never updated when the app moved behind the
Ingress at sayless.local. This silently broke any browser-direct
request whose Origin didn't match. Origins now come from the
cors.allowed-origins property, overridable per environment.

Also drops the @CrossOrigin annotations on TaskController,
AuthController, UserController, FriendController and
NotificationController: they duplicated the SecurityConfig CORS bean
with the same stale values