@@ -1,24 +1,30 @@
 package com.sayless.task.security;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod; 
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity; 
-import org.springframework.security.web.SecurityFilterChain; 
-import org.springframework.security.config.annotation.web.builders.HttpSecurity; 
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter; 
-import org.springframework.web.cors.CorsConfiguration; 
+import org.springframework.http.HttpMethod;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.web.cors.CorsConfiguration;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
+
+    @Value("${cors.allowed-origins}")
+    private String[] allowedOrigins;
+
     @Bean
     SecurityFilterChain filterChain(HttpSecurity http, JwtAuthFilter jwtFilter) throws Exception {
         http.csrf(csrf->csrf.disable())
             .cors(cors->cors.configurationSource(req -> {
                 CorsConfiguration c = new CorsConfiguration();
-                c.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000"));
+                c.setAllowedOrigins(Arrays.asList(allowedOrigins));
                 c.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
                 c.setAllowedHeaders(List.of("*"));
                 c.setAllowCredentials(true);
